Fixed readability of playlist generation page
Fixed readability of playlist generation page UI

--- a/frontend/src/pages/PlaylistGenerator.css
+++ b/frontend/src/pages/PlaylistGenerator.css
@@ -1,4 +1,3 @@
-/* src/pages/PlaylistGenerator.css */
 html,
 body,
 #root {
@@ -22,12 +21,14 @@ body {
     align-items: center;
     height: 100%;
     width: 100%;
+    margin-top: -7%;
 }
 
 .playlist-content {
     text-align: center;
     color: white;
-    display: block;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -48,13 +49,18 @@ body {
 
 .form-group {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .length-type-options,
 .length-options {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .length-type-options button,
